# third_party_libevdev

./: BUILD.gn  Makefile.in  OAT.xml  README.OpenSource  README.md  bundle.json  configure  third_party_libevdev.diff
doc/: Makefile.in
doc/html/: backwardscompatibility.html  deprecated.html  dir_237a012ffe1a208b10d31c74b4ef545e.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__bits.html  group__events.html  group__init.html  group__kernel.html  group__logging.html  group__misc.html  group__mt.html  group__uinput.html  index.html  ioctls.html  kernel_header.html  libevdev-uinput_8h.html  libevdev-uinput_8h_source.html  libevdev_8h.html  libevdev_8h_source.html  modules.html  pages.html  static_linking.html  syn_dropped.html  testing.html
doc/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_2.js  groups_4.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  typedefs_0.js
include/: config.h  event-names.h
include/linux/freebsd/: input-event-codes.h  input.h
include/linux/linux/: input-event-codes.h
libevdev/: Makefile.in  libevdev-uinput.c
patch/: BUILD.gn  apply_patch.sh
patch/diff_libevdev_mmi/libevdev/: libevdev_0000.diff
test/: Makefile.in
tools/: Makefile.in
