import("//build/ohos.gni")

gen_dst_dir = root_out_dir + "/diff_libevdev_mmi"

## Build libevdev.so {{{
config("libevdev_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "$gen_dst_dir/libevdev",
    "$gen_dst_dir/include",
  ]

  cflags = [
    "-Wno-unused-parameter",
    "-Wno-missing-braces",
  ]
}

config("libevdev_public_config") {
  include_dirs = [
    "$gen_dst_dir/export_include",
    "$gen_dst_dir/libevdev",
  ]

  cflags = []
}

ohos_source_set("patch_gen_libevdev-third-mmi") {
  part_name = "libevdev"
  subsystem_name = "thirdparty"

  sources = [
    root_out_dir + "/diff_libevdev_mmi/libevdev/libevdev-names.c",
    root_out_dir + "/diff_libevdev_mmi/libevdev/libevdev-uinput.c",
    root_out_dir + "/diff_libevdev_mmi/libevdev/libevdev.c",
  ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":libevdev_config" ]
  public_configs = [ ":libevdev_public_config" ]

  deps = [ "patch:apply_patch" ]
}

ohos_shared_library("libevdev") {
  sources = []

  configs = [ ":libevdev_config" ]

  public_configs = [ ":libevdev_public_config" ]

  deps = [":patch_gen_libevdev-third-mmi"]

  public_deps = []

  part_name = "libevdev"
  subsystem_name = "thirdparty"
}
## Build libevdev.so }}}
